Material sample type